cncProd/force-app/main/default/objects/Contact/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <label>Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customized Magnetic Car Window Sunshades</fullName>
            </value>
            <value>
                <fullName>Zertona Total Paint Protection Package</fullName>
            </value>
            <value>
                <fullName>Blackvue DR600GW-HD</fullName>
            </value>
            <value>
                <fullName>Blackvue DR650GW-HD 2-Channel</fullName>
            </value>
            <value>
                <fullName>Garmin nuvi 2567LM Navigation System</fullName>
            </value>
            <value>
                <fullName>Rear interactive Touchscreens</fullName>
            </value>
            <value>
                <fullName>Multimedia System with Nav &amp; Rev Cam</fullName>
            </value>
            <value>
                <fullName>Rikecool Premium 28</fullName>
            </value>
            <value>
                <fullName>Side Step</fullName>
            </value>
            <value>
                <fullName>Tonneau Cover / Boot Cover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>