cncProd/force-app/main/default/objects/Contact/fields/Account_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Account_RecordType__c</fullName>
    <formula>Account.RecordType.DeveloperName</formula>
    <label>Account RecordType</label>
    <type>Text</type>
</CustomField>