cncProd/force-app/main/default/objects/Contact/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DBS</fullName>
            </value>
            <value>
                <fullName>Maybank</fullName>
            </value>
            <value>
                <fullName>MBFS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>