cncProd/force-app/main/default/objects/Contact/fields/Blacklist_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Blacklist_Remarks__c</fullName>
    <label>Blacklist Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>