cncProd/force-app/main/default/objects/Contact/fields/COE_Rebate__c.field-meta.xml
<CustomField>
    <fullName>COE_Rebate__c</fullName>
    <label>COE Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>