cncProd/force-app/main/default/objects/Contact/fields/Contact_Update_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Update_Source__c</fullName>
    <label>Contact Update Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>