cncProd/force-app/main/default/objects/Contact/fields/CustomerDataSource__c.field-meta.xml
<CustomField>
    <fullName>CustomerDataSource__c</fullName>
    <description>Autoline Split: 08-Aug-2019</description>
    <inlineHelpText>Maps to the CUSTOMER_DATASOURCE json attribute.</inlineHelpText>
    <label>Customer Data Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>