cncProd/force-app/main/default/objects/Contact/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <description>Autoline Split: 08-Aug-2019
Customer Type</description>
    <inlineHelpText>Maps to CUSTOMER_TYPE json attribute.</inlineHelpText>
    <label>Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>