cncProd/force-app/main/default/objects/Contact/fields/Date_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Registration__c</fullName>
    <label>Date of Registration</label>
    <type>Date</type>
</CustomField>