cncProd/force-app/main/default/objects/Contact/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If is checked , it is consent</inlineHelpText>
    <label>Postal</label>
    <type>Checkbox</type>
</CustomField>