cncProd/force-app/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <inlineHelpText>As per NRIC</inlineHelpText>
    <label>Full Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>