cncProd/force-app/main/default/objects/Contact/fields/HasOptedOutFromEmail__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutFromEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check means customer has opted out via Saleswhale</inlineHelpText>
    <label>HasOptedOutFromEmail</label>
    <type>Checkbox</type>
</CustomField>