cncProd/force-app/main/default/objects/Contact/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>TECH_Temporary for PA Migration</description>
    <externalId>true</externalId>
    <label>Identifier</label>
    <length>125</length>
    <type>Text</type>
</CustomField>