cncProd/force-app/main/default/objects/Contact/fields/MAGIC_MBCV__c.field-meta.xml
<CustomField>
    <fullName>MAGIC_MBCV__c</fullName>
    <description>Maps to MAGIC_MBCV json attribute.</description>
    <inlineHelpText>Maps to MAGIC_MBCV json attribute.</inlineHelpText>
    <label>MAGIC_MBCV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>