cncProd/force-app/main/default/objects/Contact/fields/Name_of_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Spouse__c</fullName>
    <label>Name of Spouse</label>
    <length>200</length>
    <type>Text</type>
</CustomField>