cncProd/force-app/main/default/objects/Contact/fields/Name_Used_Car__c.field-meta.xml
<CustomField>
    <fullName>Name_Used_Car__c</fullName>
    <label>Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>