cncProd/force-app/main/default/objects/Contact/fields/Name_with_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Name_with_Salutation__c</fullName>
    <formula>TEXT(Salutation) + &quot; &quot; +  FirstName + &quot; &quot; + LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name with Salutation</label>
    <type>Text</type>
</CustomField>