cncProd/force-app/main/default/objects/Contact/fields/Old_Car_No__c.field-meta.xml
<CustomField>
    <fullName>Old_Car_No__c</fullName>
    <label>Old Car No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>