cncProd/force-app/main/default/objects/Contact/fields/Other_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Other_Incentive__c</fullName>
    <label>Other Incentive</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>