cncProd/force-app/main/default/objects/Contact/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <label>OTP</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>