cncProd/force-app/main/default/objects/Contact/fields/OTP_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>OTP_Timestamp__c</fullName>
    <label>Change Mobile No. OTP</label>
    <type>DateTime</type>
</CustomField>