cncProd/force-app/main/default/objects/Contact/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postal Code</label>
    <referenceTo>Postal_Code__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>