cncProd/force-app/main/default/objects/Contact/fields/Prospect_Aging__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Aging__c</fullName>
    <formula>Today() - DATEVALUE(LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>