cncProd/force-app/main/default/objects/Contact/fields/sw01__campaign_status__c.field-meta.xml
<CustomField>
    <fullName>sw01__campaign_status__c</fullName>
    <label>Saleswhale Campaign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>scheduled</fullName>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>running</fullName>
                <label>Running</label>
            </value>
            <value>
                <fullName>ended</fullName>
                <label>Ended</label>
            </value>
            <value>
                <fullName>canceled</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>paused</fullName>
                <label>Paused</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>