cncProd/force-app/main/default/objects/Contact/fields/sw01_last_synced_at__c.field-meta.xml
<CustomField>
    <fullName>sw01_last_synced_at__c</fullName>
    <description>Last time that Saleswhale pulled information from this resource</description>
    <inlineHelpText>Last time that Saleswhale pulled information from this resource</inlineHelpText>
    <label>Saleswhale Last Synced Time</label>
    <type>DateTime</type>
</CustomField>