cncProd/force-app/main/default/objects/Contact/fields/sw01_status__c.field-meta.xml
<CustomField>
    <fullName>sw01_status__c</fullName>
    <description>Status of Contact resource being worked by Saleswhale Engage</description>
    <inlineHelpText>Status of Contact resource being worked by Saleswhale Engage</inlineHelpText>
    <label>Saleswhale Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>unsynced</fullName>
                <default>true</default>
                <label>Unsynced</label>
            </value>
            <value>
                <fullName>qualified</fullName>
                <label>Qualified</label>
            </value>
            <value>
                <fullName>bounced</fullName>
                <label>Bounced</label>
            </value>
            <value>
                <fullName>not_interested</fullName>
                <label>Not Interested</label>
            </value>
            <value>
                <fullName>unresponsive</fullName>
                <label>Unresponsive</label>
            </value>
            <value>
                <fullName>canceled</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>human_review</fullName>
                <label>Needs Human Review</label>
            </value>
            <value>
                <fullName>stop_responding</fullName>
                <label>Stop Responding</label>
            </value>
            <value>
                <fullName>in_progress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>import_error</fullName>
                <label>Import Error</label>
            </value>
            <value>
                <fullName>enrollment_error</fullName>
                <label>Enrollment Error</label>
            </value>
            <value>
                <fullName>not_started</fullName>
                <label>Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>