cncProd/force-app/main/default/objects/Contact/fields/Unit_No_Floor__c.field-meta.xml
<CustomField>
    <fullName>Unit_No_Floor__c</fullName>
    <label>Unit No/Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>