cncProd/force-app/main/default/objects/Contact/fields/User_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>User_Branch_Code__c</fullName>
    <formula>TEXT(CreatedBy.Branch_Code__c)</formula>
    <label>User Branch Code</label>
    <type>Text</type>
</CustomField>