cncProd/force-app/main/default/objects/Contact/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <formula>IF(Is_First_Login__c, &apos;New&apos;, &apos;Returning&apos;)</formula>
    <label>User Type</label>
    <type>Text</type>
</CustomField>