cncProd/force-app/main/default/objects/Contact/validationRules/Contact_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(ISNEW(), $Profile.Name != &apos;System Administrator&apos;), true, false)</errorConditionFormula>
    <errorMessage>Sorry, you are not allowed to create contact.</errorMessage>
</ValidationRule>