cncProd/force-app/main/default/objects/Contact/listViews/all_contacts.listView-meta.xml
<ListView>
    <fullName>all_contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>NRIC__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.FIRST_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CONTACT.LAST_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Contact with FN and LN</label>
</ListView>