cncProd/force-app/main/default/objects/Contact/listViews/Leads_Created_Today.listView-meta.xml
<ListView>
    <fullName>Leads_Created_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Leads Created Today</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CITPC_Sales_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>