cncProd/force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>My Contacts</label>
</ListView>